refactor: 상품 조회 코드 개선